--- a/0_Actividad_Inicial_de_Curso_Basico/0_1_intro_to_python_es.html
+++ b/0_Actividad_Inicial_de_Curso_Basico/0_1_intro_to_python_es.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>0_1 intro_to_python_es</title>
+<title>0_1_intro_to_python_es</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13108,7 +13108,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Clicar aquí para abrir el cuaderno en google Colab. Toca sin miedo, te prometemos que no se romperá.</p>
-<p><a href="https://colab.research.google.com/github/mrBronnWow/Curso_Beginners/blob/main/0_Actividad_Inicial_de_Curso_Basico/0_1%20intro_to_python_es.ipynb"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"></a></p>
+<p><a href="https://colab.research.google.com/github/mrBronnWow/Curso_Beginners/blob/master/0_Actividad_Inicial_de_Curso_Basico/0_1%20intro_to_python_es.ipynb"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"></a></p>
 
 </div>
 </div>
