corregida errata serguigarcia.ipynb, el nombre estaba dentro de los metadatos del jupyter notebook

--- a/0_Actividad_Inicial_de_Curso_Basico/0_1_intro_to_python_es.html
+++ b/0_Actividad_Inicial_de_Curso_Basico/0_1_intro_to_python_es.html
@@ -13108,7 +13108,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Clicar aquí para abrir el cuaderno en google Colab. Toca sin miedo, te prometemos que no se romperá.</p>
-<p><a href="https://colab.research.google.com/github/mrBronnWow/Curso_Beginners/blob/master/0_Actividad_Inicial_de_Curso_Basico/0_1%20intro_to_python_es.ipynb"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"></a></p>
+<p><a href="https://colab.research.google.com/github/mrBronnWow/Curso_Beginners/blob/master/0_Actividad_Inicial_de_Curso_Basico/0_1_intro_to_python_es.ipynb"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"></a></p>
 
 </div>
 </div>
